# tesseract

./: Bitmap.h  CMakeLists.txt  Makefile  README.md  algo_api.hpp  algorithm.hpp  barrier.hpp  canonic_checks.hpp  clique_ooc_DFS.cpp  cliques_index.hpp  cliques_ooc.hpp  color_cliques.hpp  common_include.hpp  embedding.hpp  embeddings_cache.hpp  engine.hpp  engine_emb.hpp  engine_index.hpp  engine_one.hpp  filter_cache.hpp  graph.cpp  graph.hpp  graph_cache.hpp  ksearch.h  libtesseract.cpp  libtesseract.h  motif_counting.hpp  motif_counting_BFS.cpp  parallel_ligra.hpp  preprocess2020.cpp  run_static.sh  scala_algos.h  tc_smart_ooc.cpp  tesseract.cpp  tesseract.hpp  tesseract_driver.cpp  triangle.py  triangleCounting.cpp  triangle_c.hpp  triangle_counting.cpp  (+5 more)
compressed_logs/: ASPLOS_LOGS.tar  EUROSYS_LOGS.tar
db_backend/: .test.cpp.swp  mongoDriver.cpp  mongoDriver.hpp  test  test.cpp
old_file_versions/: Pattern.hpp  algo_api.hpp  canonic_checks.hpp  clique_ooc.cpp  clique_vector.hpp  cliques_ooc.hpp  engine_emb.hpp  k-clique.cpp  motif_counting.cpp  motif_counting.hpp  thread_data.hpp
